--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
     <span class="bar-content">developed Emergency Services Technology by Steve Marvell,</span>
   </div>
 </div>
-<script src="/src/main.js"></script>
+<script src="/src/main.ts"></script>
 </body>
 </html>
