--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -33,7 +34,7 @@
     </div>
   </div>
   <div class="bottom-bar">
-    <span class="bar-content">developed Emergency Services Technology by Steve Marvell,</span>
+    <span class="bar-content">Emergency Services Technology developed by Steve Marvell</span>
   </div>
 </div>
 <script src="/src/main.ts"></script>
