--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
       <div class="block">
         <i class="fa-solid fa-map block-icon"></i>
         <span class="block-label">Block 1</span>
+        <hr />
+        <span class="block-label">Block 1</span>
+        <span class="block-label">Block 1</span>
+        <span class="block-label">Block 1</span>
+
       </div>
       <div class="block">
         <i class="fa-solid fa-layer-group block-icon"></i>
