module for build

--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
     <span class="bar-content">Emergency Services Technology developed by Steve Marvell</span>
   </div>
 </div>
-<script src="/src/main.ts"></script>
+<script type="module" src="/src/main.ts"></script>
 </body>
 </html>
