--- a/index.html
+++ b/index.html
@@ -2,41 +2,40 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>MASAR MVP</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <title>Bulma Layout</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.4/css/bulma.min.css">
   <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
-<div class="root">
-  <div class="left-bar" id="left-bar">
-    <div class="block-list" id="block-list">
-      <div class="block">
-        <i class="fa-solid fa-map block-icon"></i>
-        <span class="block-label">Block 1</span>
-      </div>
-      <div class="block">
-        <i class="fa-solid fa-layer-group block-icon"></i>
-        <span class="block-label">Block 2</span>
-      </div>
-      <div class="block">
-        <i class="fa-solid fa-gear block-icon"></i>
-        <span class="block-label">Block 3</span>
-      </div>
+<aside class="sidebar menu p-3">
+  <p class="menu-label">Menu</p>
+  <ul class="menu-list">
+    <li><a>Dashboard</a></li>
+    <li><a>Settings</a></li>
+    <li><a>Profile</a></li>
+  </ul>
+</aside>
+
+<div class="main">
+  <header class="topbar navbar">
+    <div class="navbar-brand">
+      <a class="navbar-item">Top Bar</a>
     </div>
-  </div>
+  </header>
 
-  <div class="top-bar"><span class="bar-content">MA SAR</span></div>
-
-  <div class="main-panel">
-    <div class="canvas-container">
-      <canvas id="world-canvas" width="600" height="400"></canvas>
+  <section class="content section">
+    <div class="container">
+      <p>Main content goes here.</p>
     </div>
-  </div>
+  </section>
 
-  <div class="bottom-bar">
-    <span class="bar-content">Emergency Services Technology developed by Steve Marvell</span>
-  </div>
+  <footer class="bottombar footer">
+    <div class="content has-text-centered">
+      <p>Bottom Bar</p>
+    </div>
+  </footer>
 </div>
-<script type="module" src="/src/main.ts"></script>
 </body>
 </html>
